# spooled-sdk-python

./: AGENTS.md  CHANGELOG.md  PYTHON_SDK_TECHNICAL_TASK.md  README.md  pyproject.toml  vitest.config.ts
.cursor/rules/: kb-sync.mdc
.github/workflows/: ci.yml  publish.yml
docs/: API.md  PUBLISHING.md  WORKER.md
docs/ai/knowledge/: 00-START-HERE.md  MAINTENANCE.md
docs/ai/knowledge/bugs/: findings.jsonl  findings.md
docs/ai/knowledge/contracts/: parity.md
docs/ai/knowledge/dataflows/: client-transport.md
docs/ai/knowledge/risk/: change-playbook.md  chesterton-fences.md
examples/: async_example.py  basic_usage.py  schedule_example.py  worker_example.py  workflow_example.py
proto/: spooled.proto
scripts/: generate_grpc.sh  test_local.py  test_production.py  verify_production.py
src/spooled/: __init__.py  _version.py  async_client.py  client.py  config.py  errors.py
src/spooled/grpc/: __init__.py  client.py
src/spooled/grpc/stubs/: __init__.py  spooled_pb2.py  spooled_pb2.pyi  spooled_pb2_grpc.py
src/spooled/realtime/: __init__.py  events.py  sse.py  unified.py  websocket.py
src/spooled/resources/: __init__.py  admin.py  api_keys.py  auth.py  base.py  billing.py  dashboard.py  health.py  ingest.py  jobs.py  metrics.py  organizations.py  queues.py  schedules.py  webhooks.py  workers.py  workflows.py
src/spooled/types/: __init__.py  admin.py  api_keys.py  auth.py  billing.py  common.py  dashboard.py  health.py  jobs.py  organizations.py  queues.py  schedules.py  webhooks.py  workers.py  workflows.py
src/spooled/utils/: __init__.py  async_http.py  casing.py  circuit_breaker.py  http.py  jwt.py  retry.py
src/spooled/worker/: __init__.py  async_worker.py  types.py  worker.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_async_client.py  test_health.py  test_jobs.py  test_queues.py
tests/unit/: __init__.py  test_async_client.py  test_async_http_client.py  test_casing.py  test_circuit_breaker.py  test_client.py  test_client_features.py  test_config.py  test_edge_cases.py  test_errors.py  test_grpc_client.py  test_grpc_full.py  test_http_client.py  test_jwt.py  test_jwt_cache.py  test_realtime.py  test_release_contracts.py  test_resources.py  test_retry.py  test_types.py  test_websocket_full.py  test_worker.py
